fix contacts alignments

--- a/src/components/contacts/contacts.scss
+++ b/src/components/contacts/contacts.scss
@@ -11,11 +11,14 @@
   }
 
   .container {
-    align-items: center;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
+
+    @include respond-to('large') {
+      align-items: center;
+    }
   }
 
   .contacts-line {
@@ -33,7 +36,12 @@
   .contacts-social {
     display: flex;
     font-size: 2.5rem;
-    justify-content: space-around;
+    justify-content: center;
     padding: 0.4rem 0;
+    width: 50%;
+
+    a {
+      padding: 0 1rem;
+    }
   }
 }
