--- a/src/styles/print.scss
+++ b/src/styles/print.scss
@@ -67,6 +67,7 @@
       display: block;
       font-size: $font-medium;
       padding: 0;
+      width: 100%;
 
       a {
         color: $dark-gray;
